Fix layout issues
- Need to set width and height on map SVG
- Use left and right flexboxes in a 2 column grid for now

--- a/lab3/lab3.css
+++ b/lab3/lab3.css
@@ -8,7 +8,10 @@ html, body {
 main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-
     height: 100vh;
+}
+
+#left, #right {
+    display: flex;
+    flex-direction: column;
 }
